<resources>
    <string name="app_name">REAL 360</string>
    <string name="at">Agent Tagging</string>
    <string name="loginonly">Agents Login only</string>
    <string name="username">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="passwordRem">Remember Password</string>
    <string name="login">Login</string>
    <string name="msg">Messages</string>
    <string name="passwordForget">Forget Password?</string>
    <string name="property_headline">55 Strathmore Avenue</string>
    <string name="property_price">S$ 1,545,000/mo</string>
    <string name="property_price_per_unit">S$ 15psf</string>
    <string name="property_area_unit">1000sf</string>
    <string name="property_address">30 Kelatan Road</string>
    <string name="property_type">Apartment</string>
    <string name="property_owner">SumanJung</string>
    <string name="quicksearch">Quick Search</string>
    <string name="searchHint">Search by agent,property,location etc</string>
    <string name="userprofilename">John Doe</string>
    <string name="propertylist">Property Lists</string>
    <string name="agent">Agents</string>
    <string name="agentname">Ari Gold</string>
    <string name="agentnum">+81-8899767675</string>
    <string name="viewprofile">VIEW PROFILE</string>
    <string name="poststr">John Doe has posted a property "on sale at 123 street downtown". </string>
    <string name="fortype">FOR RENT</string>
    <string name="status">Pending</string>
    <string name="notification">Notifications</string>
    <string name="createlisting">Create Listing</string>
    <string name="agentnumber">+65 839993999</string>
    <string name="agentprofilename">Jennifer Lim</string>
    <string name="messageme">Message me</string>
    <string name="updateprofile">Update</string>
    <string name="updateprofilebox">Update your profile</string>
    <string name="updateprofileboxnamehint">Enter your name</string>
    <string name="updateprofileboxnohint">Enter your number</string>
    <string name="menu">Menu</string>
    <string name="mypro">My Profile</string>
    <string name="agentpro">Agent Profile</string>
    <string name="selectlt">Select Listing Type</string>
    <string name="step1">Step 1/3</string>
    <string name="step2">Step 2/3</string>
    <string name="step3">Step 3/3</string>
    <string name="forr">For Rent</string>
    <string name="fors">For Sale</string>
    <string name="selectpt">Select Property Type</string>
    <string name="hbd">HDB</string>
    <string name="condo">Condo</string>
    <string name="landed">Landed</string>
    <string name="banksale">Bank Sale</string>
    <string name="bi">Basic Info</string>
    <string name="district">District</string>
    <string name="pname">Title</string>
    <string name="bno">Block No.</string>
    <string name="sn">Street Name</string>
    <string name="pc">PostCode</string>
    <string name="unit">Unit #</string>
    <string name="ap">Asking Price S$</string>
    <string name="obv">Official bank valuation S$</string>
    <string name="tagginglimit">Tagging Limit</string>
    <string name="fpi">Floor Plan Info</string>
    <string name="nob">No. of Bedrooms</string>
    <string name="fa">Floor Area</string>
    <string name="la">Land Area</string>
    <string name="sqft">sqft</string>
    <string name="addes">Add Description</string>
    <string name="next">Next</string>
    <string name="ud">Unit Details</string>
    <string name="furnished">Furnished</string>
    <string name="floor">Floor</string>
    <string name="noofbathroom">No. of Bathrooms</string>
    <string name="splf">Special Features</string>
    <string name="fnf">Fixtures &amp; Fittings</string>
    <string name="outins">Outdoor/Indoor Space</string>
    <string name="facilities">Facilities</string>
    <string name="tenure">Tenure</string>
    <string name="pd">Property Details</string>
    <string name="topyr">Top Year</string>
    <string name="tou">Total # of Units</string>
    <string name="tof">Total # of Floors</string>
    <string name="videourl">Video Url</string>
    <string name="preview">Preview</string>
    <string name="post">Post</string>
    <string name="choose">Choose</string>
    <string name="btwen">&#009;:&#009;</string>
    <string name="units">Unit</string>
    <string name="detail">Details</string>
    <string name="property_detail">Property Details</string>
    <string name="pro_listed">Listed</string>
    <string name="pro_listing_type">Listing Type</string>
    <string name="pro_unit_no">Unit No.</string>
    <string name="pro_district">District</string>
    <string name="pro_block_no">Block No.</string>
    <string name="pro_postcode">Postcode</string>
    <string name="ex_listed">Aug 30,2016</string>
    <string name="ex_listing_type">For Rent</string>
    <string name="ex_unit_no">10 to 12</string>
    <string name="ex_district">District 23</string>
    <string name="ex_block_no">123</string>
    <string name="ex_postcode">44600</string>
    <string name="show_more">SHOW MORE</string>
    <string name="show_less">SHOW LESS</string>
    <string name="pro_tenure">Tenure</string>
    <string name="ex_tenure">2 Years</string>
    <string name="pro_total_unit">Total No. of Units</string>
    <string name="ex_total_unit">545</string>
    <string name="pro_total_floor">Total No. of Floors</string>
    <string name="ex_total_floor">4</string>
    <string name="pro_top_year">Top Year</string>
    <string name="ex_top_year">2016</string>
    <string name="unit_details">Unit Details</string>
    <string name="pro_furnished">Furnished</string>
    <string name="ex_furnished">Partially</string>
    <string name="pro_floor">Floor</string>
    <string name="ex_floor">12th</string>
    <string name="pro_spl_feat">Speacial Features</string>
    <string name="ex_spl_feat">Security, Gym</string>
    <string name="pro_iospace">Outdoor/Indoor Space</string>
    <string name="ex_iospace">No</string>
    <string name="pro_fnf">Fixtures &amp; Fittings</string>
    <string name="ex_fnf">None</string>
    <string name="description">Description</string>
    <string name="ex_description">An apartment (in American and Canadian English) or a flat (in British English) is a self-contained housing unit (a type of residential real estate) that occupies only part of a building, correctly, on a single level without a stair.\n&#xD;An apartment on the ground floor of an apartment building having direct access to a backyard or garden and a low-level apartment building or building complex surrounded by lawns and trees, shrubbery, or gardens.</string>
    <string name="ex_facilities">Balcony, Partial Furnished, Bathtub, Intercom, Cooker, High Floor</string>
    <string name="property_video">Property Video</string>
    <string name="call_agent">Call Agent Now</string>
    <string name="upcomingevent">Upcoming Events</string>
    <string name="ue_title">Malaysia Property Show</string>
    <string name="ue_address">Marriott Hotel Singapore</string>
    <string name="ue_timing">11am - 7pm</string>
    <string name="ue_date">Aug 15</string>
    <string name="ue_headline">Marriott International, Inc. is an American multinational diversified hospitality company</string>
    <string name="ue_description">Marriott was founded by John Willard Marriott in 1927 when he and his wife, Alice Sheets Marriott, opened a root beer stand in Washington, D.C.\n As a Mormon missionary in the humid summers in Washington D.C, Marriott was convinced that what residents of the city needed was a place to get a cool drink. The Marriotts later expanded their enterprise into a chain of restaurants and hotels.</string>
    <string name="grp_agents">Agents</string>
    <string name="grp_compdes">Company Description</string>
    <string name="grp_comrecru">Company Recruitment</string>
    <string name="grp_contact">Contact</string>
    <string name="grp_comdes_ex">Marriott was founded by John Willard Marriott in 1927 when he and his wife, Alice Sheets Marriott, opened a root beer stand in Washington, D.C.\n\n As a Mormon missionary in the humid summers in Washington D.C, Marriott was convinced that what residents of the city needed was a place to get a cool drink. The Marriotts later expanded their enterprise into a chain of restaurants and hotels.</string>
    <string name="grp_comrecru_ex">Marriott International, Inc. is an American multinational diversified hospitality company. \n\nMarriott was founded by John Willard Marriott in 1927 when he and his wife, Alice Sheets Marriott, opened a root beer stand in Washington, D.C.</string>
    <string name="groupnteam">Group/Team</string>
    <string name="queryhint">Search by agent, property, location etc</string>
    <string name="notirequest">Request for the tag is successfully approved.</string>
    <string name="input_hint">Type your commission rates and T&amp;C and send as message</string>
    <string name="input_prefill"></string>
    <string name="requestsentitle">Request for the tag is successfully sent.</string>
    <string name="requestcontent">You will be notified once approved.</string>
    <string name="searchint">Search Agents</string>
    <string name="titleagenttagged">AGENTS TAGGED</string>
    <string name="taptoaddpv">Tap to add photos/videos</string>
    <string name="setting">Settings</string>
    <string name="aboutus">About Us</string>
    <string name="Tnc">Terms &amp; Conditions</string>
    <string name="pp">Privacy Policy</string>
    <string name="logout">Log Out</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="enteremail">Enter Email Address</string>
    <string name="agree">SEND</string>
    <string name="disagree">CANCEL</string>
    <string name="checkemail">Please check your email for new password</string>
    <string name="ok">OK</string>
    <string name="emailhint">Your Email Address</string>
    <string name="a"></string>
    <string name="noti">Notification</string>
    <string name="message">Message</string>
    <string name="searchresult">Search Result</string>
    <string name="hdbst">HBD Sub Type</string>
    <string name="cst">Condo Sub Type</string>
    <string name="lst">Landed Sub Type</string>
    <string-array name="unit_area">
        <item>sq ft.</item>
        <item>sq mt.</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>