<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/card_margin"
    android:layout_marginRight="@dimen/card_margin"
    android:layout_marginTop="@dimen/card_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ue_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ue_title"
                android:textColor="@color/textmain"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginRight="@dimen/marginlow"
                    android:src="@drawable/location" />

                <TextView
                    android:id="@+id/ue_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ue_address"
                    android:textColor="@color/textmain" />

                <TextView
                    android:id="@+id/ue_timing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ue_timing"
                    android:textColor="@color/textmain"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/ue_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@android:color/darker_gray" />

        <TextView
            android:id="@+id/ue_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:text="@string/ue_date"
            android:textColor="@color/green_back"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ue_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:text="@string/ue_headline" />

        <TextView
            android:id="@+id/ue_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:text="@string/ue_description"
            android:visibility="gone" />

    </LinearLayout>
</android.support.v7.widget.CardView>