<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.com.example.android.agenttagging.SettingPage">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/green_back"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/drawermenu1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:src="@drawable/menu" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/setting"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.design.widget.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_margin"
                android:text="@string/aboutus"
                android:textSize="18sp"
                android:textColor="@color/textmain" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/dotted"
                android:layerType="software" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_margin"
                android:textSize="18sp"
                android:text="@string/Tnc"
                android:textColor="@color/textmain" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/dotted"
                android:layerType="software" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_margin"
                android:textSize="18sp"
                android:text="@string/pp"
                android:textColor="@color/textmain" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/dotted"
                android:layerType="software" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_margin"
                android:textSize="18sp"
                android:text="@string/logout"
                android:textColor="@color/textmain" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/dotted"
                android:layerType="software" />

        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nvView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/bg"
        app:headerLayout="@layout/logindrawerheader"
        app:itemTextColor="@android:color/white"
        app:menu="@menu/drawer_items">

        <Button
            android:id="@+id/createlisting"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/green_back"
            android:text="@string/createlisting"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:visibility="gone" />
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
